Changelog for 1.3 Series
Initial Release:  Monday, Oct 12 2011
Supported Presently

Changelog for 1.3.42
* Fixed #1184 invalid numeric format on payment search field, where date was used instead of amount (Pongracz I)
* Fix for missing emails when emailing orders/quotations (1073, Chris T)

Pongracz I is Pongracz Istvan

Changelog for 1.3.41
* Fix for invalid ref when entering payment  (John Locke)

Changelog for 1.3.40
* Updated nginx configuration (Pongracz I)
* GL account search now will search within descriptions for matches (Chris T)
* Printing without an invoice number now errors instead of increments (Chris T)
* Fixed internal server error using cash/payment (Chris T)
* Fixed #1133 (FX rate changed after selecting part/service) (Pongracz I)
* Fixed #1078 (Don't populate all empty projects automatically) (Pongracz I)
* Fixed #1139 (Vendor can show up as default customer in sales order, confusing...) (Pongracz I)
* Fixed type mismatch between invoice.qty and invoice.allocated (Chris T)
* Fixed manual tax invoices not reversing properly (Chris T, 1134)
* Fixed duplicate entry in es_AR.po (Erik H)
* Fixed sales tax rounding error under certain circumstances (Chris T)

Chris T is Chris Travers
Pongracz I is Pongracz Istvan

Changelog for 1.3.39
* Fixed Internal Server Error clicking through ar/ap report (Chris T, 1022)
* Fixed internal server error deleting part (Chris T, 1027)
* Fixed Internal server error saving part with all vendor rows (Chris T, 1028)
* Fixed pricelist pdf column widths all equal (Chris T, 1037)
* Added support for zero-downtime upgrades (Chris T)
* Fixed encoding for templates when edited through web (Chris T, 1077)
* Fixed customer/vendor dropdown resetting on update (Chris T, 1072)
* Fixed error that string cannot be used as array during payment (Chris T)
* Fixed POD syntax errors in five LedgerSMB/* files. (Robert C)
* Fixed upgrade tests where null pricegrup exists (Chris T)